--- a/src/index.css
+++ b/src/index.css
@@ -327,6 +327,7 @@ Styles of Pokemon Single Page
 	display: flex;
 	align-items: center;
 	position: relative;
+	z-index: -1
 }
 
 .number-pokemon {
@@ -506,11 +507,11 @@ Styles of Pokemon Single Page
 }
 .dropdown {
 	position: relative;
-  }
+}
   
-  .dropdown-menu {
+.dropdown-menu {
 	position: absolute;
-	margin-left: -120px;
+	margin-left: 20px;
 	max-height: 200px;
 	overflow-y: auto;
 	background-color: #fff;
